force-app/main/default/objects/Employee_Management__c/Employee_Management__c.object-meta.xml
<CustomObject>
    <label>Employee Management</label>
    <nameField>
        <displayFormat>S -{00000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>