force-app/main/default/objects/Employee_Management__c/fields/Department_Location__c.field-meta.xml
<CustomField>
    <fullName>Department_Location__c</fullName>
    <label>Department Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>